# AutoTradingProgram

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
Auto_trader/tkinter_GUI/: trading_gui.py
Trader/: __init__.py  auto_trader.py
Trader/ccxt_binance/: binance_client.py  key.json
Trader/strategy/: __init__.py  trading_strategy.py  trading_strategy_type.py
Trader/strategy/strategies/: __init__.py
Trader/strategy/strategies/mean_reversion/: __init__.py  mean_reversion.py
Trader/strategy/strategies/other_strategy/: __init__.py  other_strategy.py
auto_trader/: __init__.py  auto_trader.py
auto_trader/ccxt_binance/: __init__.py  binance_client.py
auto_trader/strategies/: __init__.py  strategy_interpreter.py
auto_trader/strategies/redirect_to_strategies/: __init__.py  chose.py
auto_trader/strategies/redirect_to_strategies/mean_reversion/: __init__.py  mean_reversion.py
auto_trader/strategy/: trading_strategy_factory.py
env/: __init__.py  config.py  global.json
env/settings/: constants.py  strings.py
gui/: trading_gui.py
logs/: logs.txt
settings/: __init__.py  config.json  config.py  logger.py
settings/env/: constants.py  log.py  strings.py
strategies/: __init__.py  strategy1.py  strategy_interpreter.py
strategies/redirect_to_strategies/: __init__.py  chose.py
strategies/redirect_to_strategies/mean_reversion/: __init__.py  mean_reversion.py
strategies/redirect_to_strategies/other/: __init__.py  config.json  other.py
tkinter_GUI/: trading_gui.py
utils/: api-utils.py  api_utils.py  data-utils.py
(+11 files in other folders)
